ycommunication/base/ingress-prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ycommunication-prd-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: ycommunication.yakuzastudio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ycommunication-web
                port:
                  number: 80
    - host: api-ycommunication.yakuzastudio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ycommunication-api
                port:
                  number: 8080
